Added: Upload file to server
