# src/docs/swagger.json
@@ -170,17 +170,21 @@
 					"filename": {
 						"type": "string"
 					},
-					"path": {
+					"originalname": {
 						"type": "string"
 					},
 					"mimetype": {
+						"type": "string"
+					},
+					"url": {
 						"type": "string"
 					}
 				},
 				"required": [
 					"filename",
-					"path",
-					"mimetype"
+					"originalname",
+					"mimetype",
+					"url"
 				],
 				"type": "object",
 				"additionalProperties": false
